--- a/templates/home.hbs
+++ b/templates/home.hbs
@@ -1,2 +1,3 @@
-{{> header }}
+{{>header }}
 <img  class ="home-picture" src="../views/equipment-homepage.jpg" alt="equipment-picture">
+{{>footer}}
