--- a/templates/register.hbs
+++ b/templates/register.hbs
@@ -3,7 +3,7 @@
 <p class="form-info">Already registered?
 	<a href="/login">Login now</a> and checkout our best medical equipments!
 </p>
-<form id="register-form" method="POST" action="/register">
+<form class="form" method="POST" action="/register">
 <div>
 	<input type="email" name="email" placeholder="Email...">
 </div>
@@ -15,7 +15,7 @@
 </div>
 <div>
 	<p class="message"></p>
-	<input id='submit-button' type="submit" value="Register">
+	<input class='submit-button' type="submit" value="Register">
 </div>
 
 </form>
