--- a/templates/login.hbs
+++ b/templates/login.hbs
@@ -3,12 +3,12 @@
 <p class="form-info">Dont have an account yet? Go and create one!
 	<a href="/register">Register Now</a>
 </p>
-<form class="form" action="/home" method="GET">
+<form class="form" action="/login" method="POST">
 <div>
-<input type="text" name="email" placeholder="Email...">
+<input type="email" name="email" placeholder="Email...">
 </div>
 <div>
-	<input type="text" name="password" placeholder="password">
+	<input type="password" name="password" placeholder="password">
 </div>
 <div>
 <p class="message"></p>
