--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -1,15 +1,17 @@
 <nav class="nav-bar">
 	<ul>
-		<li class="nav-item"><a href="/home">Home</a></li>
-		<li class="nav-item"><a href="/register">Register</a></li>
-		<li class="nav-item"><a href="/login">Login</a></li>
 	</ul>
-<div class='welcome-div'>
 	{{#if loggedIn}}
-	<li class="nav-item">Welcome {{email}}</li>
+<div class='welcome-div'>
+	<li class="nav-item">Welcome, {{email}}</li>
+</div>
+		<li class="nav-item"><a href="/home">Home</a></li>
 	<a href="/logout">Logout</a>
 	{{else}}
+		<li class="nav-item"><a href="/register">Register</a></li>
+		<li class="nav-item"><a href="/login">Login</a></li>
+		<div class="welcome-div">
 	<p>Welcome Guest</p>
+		</div>
 	{{/if}}
-</div>
 </nav>
