added an option to add products for sale

--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,3 +1,3 @@
 <footer>
-	<p><a href="https://github.com/PetyrDzhunov">The Author's github</a>Petyr Dzhunov©</p>
+	<p><a id="footer-anchor" href="https://github.com/PetyrDzhunov">The Author's github</a>Petyr Dzhunov©</p>
 </footer>
