--- a/templates/login.hbs
+++ b/templates/login.hbs
@@ -8,7 +8,7 @@
 <input type="email" name="email" placeholder="Email...">
 </div>
 <div>
-	<input type="password" name="password" placeholder="password">
+	<input type="password" name="password" placeholder="Password">
 </div>
 <div>
 <p class="message"></p>
