--- a/templates/addProduct.hbs
+++ b/templates/addProduct.hbs
@@ -13,9 +13,10 @@
 <textarea name="productDescription" placeholder="Description about the product"></textarea>
 </div>
 <div>
-<textarea name="productAdditionalInfo" placeholder="additional information here..."></textarea>
+<textarea name="productAdditionalInfo" placeholder="Additional information here..."></textarea>
+</div>
+<div>
+	<input class="submit-button" type="submit" value="Add product">
 </div>
 </form>
-
-
-{{>footer}}
+{{>footer}}	
