made some changes

--- a/templates/products.hbs
+++ b/templates/products.hbs
@@ -1,8 +1,9 @@
 {{>header}}
-<div class="products">Products on sale!</div>
+<div class="products">
 {{#each products}}
 {{>product}}
 {{else}}
 <p>No Products added yet!</p>
 {{/each}}
+</div>
 {{>footer}}
