have-check-products-route-now

--- a/templates/products.hbs
+++ b/templates/products.hbs
@@ -3,7 +3,7 @@
 {{#each products}}
 {{>product}}
 {{else}}
-<p>No Products added yet!</p>
+<p>No products added yet!</p>
 {{/each}}
 </div>
 {{>footer}}
