--- a/styles/style.css
+++ b/styles/style.css
@@ -102,8 +102,20 @@ form input {
     width: 50%;
 }
 
-.submit-button {
+.submit-button,
+.buy-item {
     background-color: green;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.edit-item {
+    background-color: rgb(122, 188, 219);
     border: none;
     color: white;
     padding: 15px 32px;
@@ -165,5 +177,16 @@ form input {
 }
 
 .products {
-    display: inline;
+    display: inline-block;
+    width: 100%;
+}
+
+.product-field {
+    text-align: justify;
+    justify-content: space-evenly;
+    align-items: inherit;
+}
+
+.product {
+    border: solid 1px black;
 }
