--- a/partials/product.hbs
+++ b/partials/product.hbs
@@ -15,7 +15,6 @@
 		{{product.productAdditionalInfo}}
 	</div>
 	<div>
-		<a href="/buy/:productId"><button class="buy-item">Buy</button></a>
-		<a href="/edit/:editId"><button class="edit-item">Edit</button></a>
+		<a href="/details/{{id}}"><button class="details-item">Details</button></a>
 	</div>
 </div>
