few-css-updates

--- a/partials/product.hbs
+++ b/partials/product.hbs
@@ -5,7 +5,7 @@
 	<div class="product-field">
 		{{product.productPrice}}
 	</div>
-	<div class="product-field">
+	<div class="product-field-image">
 		<img src="{{product.productImageUrl}}" width="400px">
 	</div>
 	<div class="product-field">
