--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -2,13 +2,13 @@
 	<ul>
 	{{#if loggedIn}}
 <div class='welcome-div'>
-	<li class="nav-item">Welcome, {{email}}</li>
+	<li class="welcome-item">Welcome, {{email}}</li>
 </div>
 		<li class="nav-item"><a href="/home">Home</a></li>
 		<div class="dropdown">
 	<button class="dropbtn">Products</button>
 	<div class="dropdown-content">
-		<a href="/add-product">Add new Product</a>
+		<a href="/add-product">Add new product</a>
 		<a href="/check-products">Check all products</a>
 	</div>
 </div>
@@ -17,7 +17,7 @@
 		<li class="nav-item"><a href="/register">Register</a></li>
 		<li class="nav-item"><a href="/login">Login</a></li>
 		<div class="welcome-div">
-	<p>Welcome Guest</p>
+			<p>Welcome Guest</p>
 		</div>
 	</ul>
 	{{/if}}
