--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,14 @@ footer {
     padding: 5px;
 }
 
+ul {
+    list-style-type: none;
+}
+
+.nav-bar {
+    border-bottom: 2px solid blue;
+}
+
 footer a:hover {
     color: black;
 }
@@ -34,7 +42,7 @@ textarea {
 a:hover {
     transition: 0.3s ease;
     text-decoration: none;
-    color: blue;
+    color: yellowgreen;
 }
 
 a {
@@ -59,7 +67,7 @@ a {
 
 footer {
     width: 100%;
-    background-color: blue;
+    background-color: black;
     color: white;
 }
 
@@ -67,19 +75,20 @@ footer p {
     padding: 3%;
     border-top: 2px solid blue;
     font-size: 20px;
-    color: white;
+    color: red;
     text-align: center;
     font-style: italic;
-    border-top: 2px solid orange;
 }
 
 footer p a {
-    color: orange;
+    color: red;
     text-decoration: none;
 }
 
 footer p a:hover {
-    text-decoration: underline blue;
+    transition: 0.3s ease;
+    text-decoration: none;
+    color: yellowgreen;
 }
 
 .form-info {
@@ -136,12 +145,25 @@ form input {
     font-size: 16px;
 }
 
+#delete-href {
+    color: white;
+}
+
+#delete-href:hover {
+    color: greenyellow;
+}
+
 .welcome-div {
     color: white;
     text-align: center;
     justify-content: right;
     padding: 0 auto;
     font-size: 20px;
+}
+
+.welcome-item {
+    color: red;
+    text-decoration: none;
 }
 
 .dropbtn {
@@ -167,14 +189,15 @@ form input {
 }
 
 .dropdown-content a {
-    color: black;
+    color: red;
+    background-color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
 
 .dropdown-content a:hover {
-    background-color: #ddd;
+    color: greenyellow;
 }
 
 .dropdown:hover .dropdown-content {
@@ -184,7 +207,7 @@ form input {
 .dropdown:hover .dropbtn {
     transition: 0.3s ease;
     text-decoration: none;
-    color: blue;
+    color: yellowgreen;
 }
 
 .products {
@@ -200,4 +223,15 @@ form input {
 
 .product {
     border: solid 1px black;
+    display: inline;
+}
+
+.product-image {
+    width: 30%;
+}
+
+.product-details {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
