--- a/templates/details.hbs
+++ b/templates/details.hbs
@@ -1,18 +1,18 @@
 {{>header}}
-<div class="offer-details">
+<div class="product-details">
 	<h1>{{product.productName}}</h1>
 	<div class="info">
-		<img src="{{productImageUrl}}" alt="{{product.productName}}">
+		<img class = "product-image" src="{{product.productImageUrl}}" alt="{{product.productName}}">
 		<div class="description">{{product.productDescription}}
 			<br>
 			<br>
-			<p class="price">{{product.price}}</p>
+			<p class="price">{{product.productPrice}}</p>
 		</div>
 	</div>
 	<div class="actions">
 		{{#if product.imTheSalesman}}
 		<button class="edit-item"><a href="/edit/{{product.id}}">Edit</a></button>
-		<button class="delete-item"><a href="/delete/{{product.id}}">Delete</a></button>
+		<button class="delete-item"><a id='delete-href' href="/delete/{{product.id}}">Delete</a></button>
 		{{else}}
 		{{#if product.imInTheClientsList}}
 		<span>You already bought it !</span>
